--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 capstone/.DS_Store
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
+capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
