--- a/capstone/Podfile
+++ b/capstone/Podfile
@@ -7,6 +7,7 @@ target 'capstone' do
   # Pods for capstone
 	pod 'Parse'
   pod 'AFNetworking'
+  pod 'RSSelectionMenu'
 
   target 'capstoneTests' do
     inherit! :search_paths
