--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 capstone/.DS_Store
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
+capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
