--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ capstone/.DS_Store
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
+capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
+capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
