--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterface
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
 capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+capstone/capstone.xcworkspace/xcuserdata/celineboudaie.xcuserdatad/UserInterfaceState.xcuserstate
